0.2.4
Truncated popup function menu entries when function def is over 100 characters ( copy and paste of the entry uses full definition ).
Truncated function menu entries when function def is over 100 characters.
Set widget names on menus to help find them from plugins.
Added french translation.
Tweaked prefs layout.
Added 'No Syntax Highlighting' to prefs to turn off syntax highlighting.

0.2.3
Cancel quit properly if 'Cancel' selected in unsaved documents dialog.
Status bar now shows number of replacements when using find/replace.
Fixed 'handles' showing on side/top/bottom on startup when not showing the user panes.
Added message dialog when disabling a plugin that can't be unloaded without a restart.
Added KKEdit version string to data passed to plugins.
Added main notebook widget to data passed to plugins.
Exposed main menu callbacks to plugins so they can be overridden.
Improved open include now tries exact match -> best match.
Open include file now only needs the cursor on the line with a #include no need to select the whole line, # **MUST** be the first character on the line.
Improved search for definition now try's: exact match in open files->exact match in all files in current folder->best match in all files in current folder.
Fixed bug in restore session when trying to restore file with a space in the name.
Fixed crash when trying to restore session with bookmarks with missing file.
Improved string scanning for valid chars.
Standardized save/load routines for configs.
If two or more plugins use a top/bottom pane pane wont be closed until all plugins close it.
Added top/bottom draggable panes for plugins.
Added loadVarsFromFile and saveVarsToFile to kkedits export so plugins can use the routines to save/load data.
Fixed key propagation to tools!
Added reserved data to page structure.
Fixed bug when plugin must not be unloaded.
Fixed segfault when shutting window with close button rather than using quit.
Fixed key presses not being propagated to plugins.