@@ -1,6 +1,8 @@
 0.2.4
-Truncated popup function menu entries when function def is over 100 characters ( copy and paste of the entry uses full definition ).
-Truncated function menu entries when function def is over 100 characters.
+Now remembers size and position of built in docviewer on quit.
+Removed redundant function 'deleteSlice' from globals.
+Truncated popup function menu entries when function/variable def is over 100 characters ( copy and paste of the entry uses full definition ).
+Truncated function menu entries when function/variable def is over 100 characters.
 Set widget names on menus to help find them from plugins.
 Added french translation.
 Tweaked prefs layout.
